# midas

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SWEEP-2026-05-03.md  pyproject.toml  test_check.db
.claude/: .coc-sync-marker  VERSION
.claude/commands/: analyze.md  codify.md  implement.md  redteam.md  todos.md  wrapup.md
.claude/rules/: agents.md  dataflow-pool.md  git.md  infrastructure-sql.md  observability.md  testing.md  zero-tolerance.md
.github/workflows/: validate.yml
apps/web/: middleware.ts  package-lock.json  package.json
specs/: 00-first-principles.md  01-user-persona.md  02-value-chain.md  03-universe-and-data.md  04-latent-first-architecture.md  05-model-pool-and-meta-router.md  06-continuous-regime-rendering.md  07-evidence-first-decision.md  08-autonomy-and-trust.md  09-surfaces-and-attention.md  10-moments-of-truth.md  11-compliance-and-risk.md  12-performance-and-track-record.md  13-execution-cost-and-microstructure.md  14-ibkr-integration.md  _index.md
src/midas/: __init__.py  config.py
tests/: conftest.py  test_agents_brief.py  test_api.py  test_attribution.py  test_autonomy_compliance.py  test_contextual_bandit.py  test_execution.py  test_gap_attention_budget.py  test_gap_brief_contract.py  test_gap_ladder_demote_to.py  test_gap_retrieve_analogue.py  test_learned_attention.py  test_ml_contrastive_training.py  test_ml_deep_bayesian_filter.py  test_ml_deepssm_training.py  test_ml_diffusion_foundation.py  test_ml_mae_training.py  test_ml_model_registry.py  test_ml_online_inference.py  test_ml_ood_detector.py  test_ml_posterior_state.py  test_ml_training.py  test_ml_vae_training.py  test_model_heads.py  test_paper_trading.py  test_regime.py  test_release.py  test_router_shadow.py  test_scheduler.py  test_state_inference.py  test_state_inference_extended.py  test_testing_framework.py  test_universe.py
tests/fabric/: test_adapter_alt_macro.py  test_adapter_base.py  test_adapter_eodhd.py  test_adapter_fred.py  test_adapter_ibkr.py  test_adapter_perplexity.py  test_adapter_sec_edgar.py  test_adapter_universe.py  test_adapter_yahoo.py  test_fabric_cache.py  test_fabric_embeddings.py  test_fabric_features.py  test_fabric_freshness.py  test_fabric_health.py  test_fabric_models.py
tests/integration/: test_debate_agent_wiring.py  test_debate_router_wiring.py  test_ibkr_order_states.py  test_model_registry_wiring.py  test_notifications_wiring.py  test_onboarding_wiring.py
tests/regression/: test_backtest_engine_formulas.py  test_backtest_weight_fix.py  test_brief_section_grounding.py  test_debate_multi_turn.py  test_issue_eodhd_auth_audit.py  test_issue_yahoo_crosscheck_threshold.py  test_model_registry_lifecycle.py  test_order_state_machine.py  (+1 more)
tests/security/: __init__.py  (+3 more)
(+435 files in other folders)
