[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midas"
version = "0.1.0"
description = "Autonomous investment assistant — latent-first, evidence-driven co-decision platform"
authors = [
    {name = "Jack Hong"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Kailash SDK
    "kailash>=2.11.3",
    "kailash-mcp>=0.2.10",
    "kailash-nexus>=2.3.0",
    "kailash-dataflow>=2.3.2",
    "kailash-kaizen>=2.13.1",
    "kailash-pact>=0.11.0",
    "kailash-ml>=1.5.1",
    "kaizen-agents>=0.9.4",
    # Data adapters
    "httpx>=0.27.0",
    "yfinance>=0.2.36",
    # Numerical / ML
    "numpy>=1.26",
    "pandas>=2.2",
    # Async Redis
    "redis>=5.0",
    # Utilities
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "pydantic>=2.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
ml = [
    # PyTorch - On Windows, install separately: pip install torch --index-url https://download.pytorch.org/whl/cu118
    "torch>=2.7.1",
]
align = [
    "kailash-align>=0.7.0",
]
all = [
    "kailash-align[all]>=0.7.0",
]
dev = [
    # Testing (pytest>=7.2.0 removes vulnerable py dependency)
    "pytest>=7.2.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    # Linting & Formatting
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    # Security & Pre-commit
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
]

[project.urls]
# TODO: Replace with your project URLs
# "Homepage" = "https://github.com/your-org/your-project"
# "Bug Tracker" = "https://github.com/your-org/your-project/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".*", "__pycache__*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "regression: Regression tests for previously fixed bugs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
